--- a/Frontend/src/components/styles/Navbar.css
+++ b/Frontend/src/components/styles/Navbar.css
@@ -31,9 +31,9 @@
     margin-top: 60px;
     text-decoration: none;
     padding: 0.5rem 1rem;
-    height: 100%;
     font-weight: bold;
     font-size: 1.5rem;
+    line-height: normal;
   }
   
   .nav-menu {
