--- a/Frontend/src/styles/index.css
+++ b/Frontend/src/styles/index.css
@@ -1,7 +1,3 @@
-.container {
-  max-width: 80%;
-  margin: 30px auto;
-  overflow: auto;
-  min-height: 300px;
-  padding: 30px;
+html, body {
+  overflow-x: hidden;
 }
